# bevy_jam_5

./: Cargo.toml  README.md  build_itch.sh
.github/workflows/: release.yaml
assets/buildings/: field.build.ron  house.build.ron  lumbermill.build.ron  market.build.ron  statue.build.ron  workshop.build.ron  ~formatter_119025_house.ron.bak  ~formatter_47303_workshop.build.ron.bak  ~formatter_526970_field.build.ron.bak  ~formatter_570089_field.ron.bak  ~formatter_841663_workshop.build.ron.bak  ~formatter_876594_market.build.ron.bak  ~formatter_963830_workshop.ron.bak
assets/items/: beer.item.ron  carrot.item.ron  corn.item.ron  double_corn.item.ron  grape.item.ron  potato.item.ron  rum.item.ron  sugarcane.item.ron  vodka.item.ron  wheat.item.ron  wine.item.ron  wood.item.ron  ~formatter_170420_beer.item.ron.bak  ~formatter_193715_wheat.item.ron.bak  ~formatter_223403_cloth.ron.bak  ~formatter_407981_rum.item.ron.bak  ~formatter_453475_wheat.item.ron.bak  ~formatter_597608_carrot.ron.bak  ~formatter_621648_carrot.ron.bak  ~formatter_636320_carrot.ron.bak  ~formatter_789752_vodka.item.ron.bak  ~formatter_82034_beer.item.ron.bak  ~formatter_876854_grape.item.ron.bak  ~formatter_918819_sugarcane.item.ron.bak  ~formatter_91944_vodka.item.ron.bak  ~formatter_963754_potato.ron.bak
assets/orders/: beer.work.ron  carrots.work.ron  corn.work.ron  double_corn.work.ron  grapes.work.ron  potatos.work.ron  rum.work.ron  sugarcane.work.ron  wheat.work.ron  (+16 more)
src/: app_state.rs  assets.rs  common.rs  main.rs  ron_loader.rs  rval.rs  state.rs
wasm/: brew_tycoon.js  index.html
(+60 files in other folders)
