[package]
name = "bevy_jam_5"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"

[build]
rustflags = ["--cfg=web_sys_unstable_apis"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.14"
bevy_asset_loader = "0.21.0"
rand = "0.8.5"
sickle_ui = { git = "https://github.com/UmbraLuminosa/sickle_ui", version = "0.2.1" }
ron = "0.8.1"
serde = "1.0.204"
bevy_aseprite_ultra = "0.2.3"
bevy_tweening = "0.11.0"
anyhow = "1.0.86"
bevy_embedded_assets = "0.11.0"


[features]
dev = ["bevy/file_watcher", "bevy/dynamic_linking"]
